tests/test_proof/good/simple_vars.catala_en
## Test

```catala
declaration scope A:
  internal x content integer
  internal y content boolean
  output z content integer

scope A:
  definition y equals true
  definition x under condition y consequence equals 0
  definition x under condition not y consequence equals 1
  definition z under condition x = 0 consequence equals 0
  definition z under condition x < 0 consequence equals -1
  definition z under condition x > 0 consequence equals 1
```
```catala-test-inline
$ catala Proof --disable_counterexamples 
[RESULT] No errors found during the proof mode run.
```
